# compressor

./: Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  run
.github/workflows/: test.yml
compressor/: __init__.py  db.py  main.py  persistence.py  schema.sql  urls.py
compressor/templates/: index.html  list.html  response.html
tests/: test_functional.py
