[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "compressor"
version = "0.1.0"
description = "URL shortener app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask~=3.0",
]

[tool.setuptools.packages.find]
exclude = [
    "instance",
    "tests",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4~=4.12",
    "pytest~=8.0",
    "pytest-mypy~=0.10.3",
    "types-beautifulsoup4~=4.12",
]
